--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,5 +63,5 @@
     "require": ["tsconfig-paths/register"]
   },
   "include": ["src/**/*", "src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "__tests__", "src/__tests__"]
 }
