--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "cli": "nodemon --watch 'src/**/*.ts' --exec tsx src/cli.ts",
+    "cli": "tsx watch src/practice.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "test": "jest",
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/core": "^0.3.72",
+    "@langchain/ollama": "^0.2.3",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "chromadb": "^3.0.14",
@@ -32,6 +34,7 @@
     "langchain": "^0.3.31",
     "module-alias": "^2.2.3",
     "mongoose": "^8.18.0",
+    "node-telegram-bot-api": "^0.66.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
@@ -49,6 +52,7 @@
     "@types/mocha": "^10.0.10",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^24.3.0",
+    "@types/node-telegram-bot-api": "^0.64.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
